# django-app-boilerplate

./: .coveragerc  .env.example  .gitignore  .pylintrc  .template.secrets.yaml  Dockerfile  Dockerfile.development  LICENSE  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  settings.yaml  tox.ini
configure/: asgi.py  settings.py  urls.py  wsgi.py
core/: apps.py  logger.py
main_backend/: apps.py  logger.py
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  test_dummy.py
