[tool.poetry]
name = "django_app_boilerplate"
version = "0.1.0"
description = "Boilerplate for django app, it contains popular tools used in development."
license = "MIT"
authors = ["first.last <email>"]


[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.4"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
