[tool.poetry]
name = "django_app_boilerplate"
version = "0.1.0"
description = "Boilerplate for django app, it contains popular tools used in development."
license = "MIT"
authors = ["first.last <email>"]


[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.4"
Django = "^3.2.3"
psycopg2-binary = "^2.8.6"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
tox = "^3.23.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"
flake8 = "^3.9.2"
pylint = "^2.8.2"
pytest-django = "^4.3.0"
Faker = "^8.2.0"
mypy = "^0.812"
isort = "^5.8.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length=100
use_parentheses=true
multi_line_output=3
lines_between_types=1
include_trailing_comma=true
force_grid_wrap=0
