[tool.poetry]
name = "django_app_boilerplate"
version = "1.0"
description = "Boilerplate for django app, it contains popular tools used in development."
license = "MIT"
authors = ["first.last <email>"]


[tool.poetry.dependencies]
python = "^3.10.3"
Django = "^3.2.12"
djangorestframework = "^3.13.1"
django-debug-toolbar = "^3.2.4"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
jsonschema = "^4.4.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.13.5"
pytest-django = "^4.5.2"
mypy = "^0.942"
pytest = "^7.1.1"
Faker = "^13.3.4"
coverage = "^6.3.2"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length=100
use_parentheses=true
multi_line_output=3
lines_between_types=1
include_trailing_comma=true
force_grid_wrap=0
